resources/insights-prod/3scale-prod/gateway-prod.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gateway
  name: gateway-prod
spec:
  host: gateway-prod.apps.crcp01ue1.o9m8.p1.openshiftapps.com
  port:
    targetPort: 9091
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
